--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "html-charset",
   "version": "0.0.1",
-  "description": "A TransformStream that detects charset from http client response and content, and converts to utf-8.",
+  "description": "A TransformStream that detects charset from http client response and content, and converts HTML to utf-8. Besides, charaset strings in a <meta> tag will be replaced to 'UTF-8'.",
   "main": "index.js",
   "dependencies": {
     "request": "^2.69.0"
