--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A TransformStream that detects charset from http client response and content, and converts HTML to utf-8. Besides, charaset strings in a <meta> tag will be replaced to 'UTF-8'.",
   "main": "index.js",
   "dependencies": {
+    "charset": "^1.0.0",
     "iconv-lite": "^0.4.13",
     "trumpet": "^1.7.2"
   },
