--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "html-charset",
-  "version": "0.0.9",
-  "description": "A TransformStream that detects charset from http client response and content, and converts HTML to utf-8. Besides, charaset strings in a <meta> tag will be replaced to 'UTF-8'.",
+  "version": "0.0.10",
+  "description": "A TransformStream that detects charset from http client response and content, and converts HTML to utf-8. Besides, replaces charaset strings in a <meta> tag to 'UTF-8'.",
   "main": "index.js",
   "dependencies": {
     "charset": "^1.0.0",
