--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "html-charset",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "description": "A TransformStream that detects charset from http client response and content, and converts HTML to utf-8. Besides, replaces charaset strings in a <meta> tag to 'UTF-8'.",
   "main": "index.js",
   "dependencies": {
@@ -17,7 +17,7 @@
     "url": "git+https://github.com/IceSofticon30th/html-charset.git"
   },
   "keywords": [
-    "http",
+    "html",
     "charset",
     "stream",
     "streaming",
